[package]
name = "procedure"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zela-std = { git = "https://github.com/Zela-io/zela-std", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
bs58 = "0.5"
geo-rules = { path = "../geo-rules" }
